--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "@types/react-dom": "^18.2.7",
     "antd": "^5.8.4",
     "cors": "^2.8.5",
-    "driver.js": "^1.2.1",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -55,9 +53,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/react": "^14.0.0",
-    "fetch-mock": "^9.11.0",
-    "react-test-renderer": "^18.2.0",
-    "redux-mock-store": "^1.5.4"
+    "react-test-renderer": "^18.2.0"
   },
   "type": "module"
 }
